--- a/sbdemo/src/main/resources/application.properties
+++ b/sbdemo/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+#===========connect to mysql=============#
 
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
