--- a/sbdemo/src/main/resources/application.properties
+++ b/sbdemo/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #===========connect to mysql=============#
 
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://localhost:3306?serverTimezone=UTC
-#spring.datasource.username=scott
-#spring.datasource.password=Scott00
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.ddl-auto=create
+spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC
+spring.datasource.username=scott
+spring.datasource.password=Scott00
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 server.port = 5000
