--- a/sbdemo/Dockerfile
+++ b/sbdemo/Dockerfile
@@ -1,4 +1,4 @@
 From openjdk:8
 EXPOSE 5000
-COPY ./target/sbdemo-0.0.1-SNAPSHOT.jar sbdemo-0.0.1-SNAPSHOT.jar
+COPY /target/sbdemo-0.0.1-SNAPSHOT.jar sbdemo-0.0.1-SNAPSHOT.jar
 CMD ["java","-jar","sbdemo-0.0.1-SNAPSHOT.jar"]
