--- a/sbdemo/src/main/resources/application.properties
+++ b/sbdemo/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 #===========connect to mysql=============#
-
+MYSQL_HOST=localhost
 spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://localhost:3306/test?serverTimezone=UTC
-spring.datasource.username=scott
-spring.datasource.password=Scott00
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST}:3306/test?serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=202034jy
+spring.datasource.platform=mysql
+spring.datasource.initialization-mode=always
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 server.port = 5000
